# open-waste-intelligence-OWI-

./: .dockerignore  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.claude/: settings.json
.github/workflows/: ci.yml
api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py  0002_auth.py  0003_quarantine_tracking.py  0004_collections_bin_health.py  0005_predictions.py  0006_volunteer_events.py  0007_routes.py  0008_model_artifact.py  0009_recycling.py  0010_dumping.py  0011_cleanliness.py  0012_api_keys.py  0013_collection_methods.py  0014_audit_log.py  0015_retention.py  0016_org_config.py  0017_mfa.py  0018_notifications.py
api/scripts/: fetch_models.py  seed.py  smoke.py
api/src/owi_api/: audit.py  bootstrap.py  config.py  db.py  digest.py  fleet.py  main.py  maintenance.py  ml_infer.py  notify.py  org_config.py  ratelimit.py  scheduler.py  security.py  weights.py
api/src/owi_api/analytics/: bin_health.py  carbon.py  cleanliness.py  cleanliness_refresh.py  composition.py  dumping.py  osrm.py  public_data.py  recycling.py  refresh.py  review.py  routing.py  savings.py  volunteer.py
api/src/owi_api/data/: carbon-factors-v1.csv
api/src/owi_api/ingestion/: person_onnx.py  privacy.py  quality.py  service.py  storage.py
api/src/owi_api/models/: __init__.py  api_key.py  audit.py  base.py  cleanliness.py  dumping.py  enums.py  notification.py  observation.py  operations.py  org_settings.py  prediction.py  recycling.py  registry.py  route.py  volunteer.py
api/src/owi_api/reports/: grant.py
api/src/owi_api/routers/: admin.py  analytics.py  auth.py  bins.py  carbon.py  cleanliness.py  dumping.py  models.py  observations.py  operations.py  public.py  recycling.py  review.py  routes.py  sites.py  users.py  volunteers.py
api/src/owi_api/schemas/: observation.py  registry.py
api/src/owi_api/worker/: jobs.py  queue.py
api/tests/: test_audit.py  test_bin_health.py  test_carbon.py  test_cleanliness.py  test_composition.py  test_config.py  test_digest.py  test_dumping.py  test_fleet.py  test_ml_infer.py  test_observation_schema.py  test_org_config.py  test_person_onnx.py  test_privacy.py  test_public_data.py  test_quality.py  test_ratelimit.py  test_recycling.py  test_retention.py  test_review.py  test_routing.py  test_savings.py  test_security.py  test_storage.py  test_totp.py  test_volunteer.py
app/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
app/src/: App.tsx  i18n.ts  main.tsx  styles.css  theme.ts
app/src/components/: CollectList.tsx  EChart.tsx  Insights.tsx  QrScan.tsx
app/src/lib/: collect.ts  compress.ts  gps.ts  queue.ts  settings.ts  sync.ts
dash/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dash/src/: App.tsx  api.ts  i18n.tsx  main.tsx  nav.tsx  styles.css  theme.ts  useApi.ts
dash/src/components/: DataTable.tsx  EChart.tsx  Layout.tsx  MapView.tsx  MfaDialog.tsx  NavSearch.tsx  SectionNav.tsx  ui.tsx
dash/src/pages/: Audit.tsx  BinHealth.tsx  Bins.tsx  Carbon.tsx  Cleanliness.tsx  Composition.tsx  Dumping.tsx  Login.tsx  OpenData.tsx  Overview.tsx  Recycling.tsx  Reports.tsx  Review.tsx  Routes.tsx  Settings.tsx  Users.tsx  Volunteers.tsx
deploy/: Caddyfile  restore.sh  web.Dockerfile
docs/: 01-problem-statement.md  02-prd.md  03-architecture.md  04-ml-strategy.md  05-data-model.md  06-pilot-plan.md  07-roadmap.md  08-data-governance-ethics.md  09-risks.md  10-system-spec.md  11-deployment.md  FINISH_PLAN.md  STATUS.md  data-model.md  deployment.md  glossary.md  system-spec.md
docs/modules/: M1-waste-classification.md  M2-bin-health-monitoring.md  M3-illegal-dumping-detection.md  M4-route-optimization.md  M5-recycling-intelligence.md  M6-cleanliness-index.md  M7-carbon-impact.md  M8-volunteer-analytics.md
infra/: docker-compose.yml
ml/: README.md  pyproject.toml
ml/src/owi_ml/: config.py  registry.py
ml/src/owi_ml/data/: coco.py  dedupe.py  download.py  export_reviewed.py  split.py  taxonomy_map.py
ml/src/owi_ml/eval/: metrics.py
ml/src/owi_ml/labeling/: client.py  export_coco.py  setup_project.py  taxonomy.py
ml/src/owi_ml/train/: classify.py
ml/tests/: test_data.py  test_gather.py  test_metrics.py  test_taxonomy.py
site/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
site/src/: main.ts  style.css
