[project]
name = "owi-api"
version = "0.1.0"
description = "OpenWaste Intelligence backend: ingestion, registry, analytics, workers"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "geoalchemy2>=0.15",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
    "redis>=5.0",
    "rq>=1.16",
    # <5: OpenCV 5 removed HOGDescriptor, which the bootstrap privacy gate uses until
    # the high-recall ONNX person model lands (T5); revisit the pin then.
    "opencv-python-headless>=4.10,<5",
    "numpy>=1.26",
    "minio>=7.2",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/owi_api"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
packages = ["owi_api"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["cv2", "geoalchemy2.*", "minio.*", "rq.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
