[project]
name = "owi-ml"
version = "0.1.0"
description = "OpenWaste Intelligence ML: labeling pipeline, training, evaluation"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.27",
    "pydantic-settings>=2.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/owi_ml"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
packages = ["owi_ml"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
